# gazebo_wfql

./: CMakeLists.txt  flag_locator.cc  flag_locator.hh  model_wfqi.cc  model_wfqi.hh  simulation.world  test.sh  testgerade.world
models/Boat/: model.config  model.sdf
models/Flag/: model.config  model.sdf
models/WaterPlane/: model.config  model.sdf
